deployment/mlflow/mlflow/mlflow-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: mlflow
  name: mlflow
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
      name: mlflow
    spec:
      serviceAccountName: mlflow
      containers:
        - name: mlflow
          image: europe-north1-docker.pkg.dev/silo-terraform1/rd-iml4e-public/mlflow:0.0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          livenessProbe:
            failureThreshold: 30
            tcpSocket:
              port: 5000
            initialDelaySeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 10
            timeoutSeconds: 5
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
